<resources>
    <string name="app_name">OCRMC</string>
        <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="input">Input</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="result">Result</string>
    <string name="input_your_matrix_here">Input your matrix here</string>
    <string name="matrix_buffer">Matrix buffer</string>
    <string name="add_current_matrix">Add current matrix</string>
    <string name="clear_all">Clear all</string>
    <string name="ocr">OCR</string>
    <string name="buffer">Buffer</string>

    <string-array name="matrixops">
        <item>Sum</item>
        <item>Mul</item>
        <item>Pow</item>
        <item>Transp</item>
        <item>Det</item>
        <item>REF</item>
    </string-array>

    <string-array name="numcolrows">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
