<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dMatrixBuffer"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="artemiev.ocrmc.aCalc">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="567dp">

            <ToggleButton
                android:id="@+id/bToggleAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/togglebutton"
                android:textOff="+"
                android:textOn="-"
                app:layout_constraintEnd_toStartOf="@+id/bInputB"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bInputA"
                app:layout_constraintTop_toBottomOf="@+id/sOPChoice" />

            <ToggleButton
                android:id="@+id/bInputA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:textOff="@string/a"
                android:textOn="@string/a"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sOPChoice" />

            <ToggleButton
                android:id="@+id/bInputB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:textOff="@string/b"
                android:textOn="@string/b"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sOPChoice" />

            <Spinner
                android:id="@+id/sOPChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:entries="@array/matrixops"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tMatrixDisplay"
                android:layout_width="353dp"
                android:layout_height="252dp"
                android:layout_marginTop="72dp"
                android:background="@android:drawable/alert_light_frame"
                android:ems="10"
                android:hint="@string/input_your_matrix_here"
                android:imeOptions="flagNoEnterAction"
                android:singleLine="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bResult" />

            <Spinner
                android:id="@+id/sRows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:dropDownWidth="48dp"
                android:entries="@array/numcolrows"
                app:layout_constraintBottom_toTopOf="@+id/tMatrixDisplay"
                app:layout_constraintStart_toStartOf="@+id/tMatrixDisplay" />

            <Spinner
                android:id="@+id/sCols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:dropDownWidth="48dp"
                android:entries="@array/numcolrows"
                app:layout_constraintBottom_toTopOf="@+id/tMatrixDisplay"
                app:layout_constraintEnd_toEndOf="@+id/tMatrixDisplay" />

            <TextView
                android:id="@+id/tMatrixTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/input"
                app:layout_constraintBottom_toTopOf="@+id/sRows"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ToggleButton
                android:id="@+id/bResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:textOff="@string/result"
                android:textOn="@string/result"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bToggleAction" />

            <Button
                android:id="@+id/bActivateOcr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="onClick"
                android:text="@string/ocr"
                app:layout_constraintEnd_toStartOf="@+id/bOpenBuffer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tMatrixDisplay" />

            <Button
                android:id="@+id/bOpenBuffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:onClick="onClick"
                android:text="@string/buffer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bActivateOcr"
                app:layout_constraintTop_toTopOf="@+id/bActivateOcr" />

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:layout_gravity="right">

        <LinearLayout
            android:id="@+id/llDrawerLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/matrix_buffer"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bAddToBuffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_current_matrix" />

            <Button
                android:id="@+id/bClearBuffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_all" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@android:color/darker_gray" />


        </LinearLayout>
    </ScrollView>
    <!--app:menu="@menu/my_navigation_items" /> -->

</android.support.v4.widget.DrawerLayout>


